docs/apache-airflow-providers-google/10.1.1/_sources/_api/tests/system/providers/google/cloud/vertex_ai/example_vertex_ai_auto_ml_video_training/index.rst.txt
:py:mod:`tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_auto_ml_video_training`
================================================================================================

.. py:module:: tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_auto_ml_video_training

.. autoapi-nested-parse::

   Example Airflow DAG for Google Vertex AI service testing Auto ML operations.



Module Contents
---------------

.. py:data:: ENV_ID

   

.. py:data:: PROJECT_ID

   

.. py:data:: DAG_ID
   :value: 'vertex_ai_auto_ml_operations'

   

.. py:data:: REGION
   :value: 'us-central1'

   

.. py:data:: VIDEO_DISPLAY_NAME

   

.. py:data:: MODEL_DISPLAY_NAME

   

.. py:data:: VIDEO_GCS_BUCKET_NAME

   

.. py:data:: RESOURCES_PATH

   

.. py:data:: VIDEO_ZIP_CSV_FILE_LOCAL_PATH

   

.. py:data:: VIDEO_GCS_OBJECT_NAME
   :value: 'vertex-ai/video-dataset.csv'

   

.. py:data:: VIDEO_CSV_FILE_LOCAL_PATH
   :value: '/video/video-dataset.csv'

   

.. py:data:: VIDEO_DATASET

   

.. py:data:: VIDEO_DATA_CONFIG

   

.. py:data:: create_bucket

   

.. py:data:: test_run

   

