docs/apache-airflow-providers-google/10.23.0/_sources/_api/tests/system/providers/google/cloud/vertex_ai/example_vertex_ai_auto_ml_video_training/index.rst.txt
:py:mod:`tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_auto_ml_video_training`
================================================================================================

.. py:module:: tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_auto_ml_video_training

.. autoapi-nested-parse::

   Example Airflow DAG for Google Vertex AI service testing Auto ML operations.



Module Contents
---------------

.. py:data:: ENV_ID

   

.. py:data:: PROJECT_ID

   

.. py:data:: DAG_ID
   :value: 'vertex_ai_auto_ml_operations'

   

.. py:data:: REGION
   :value: 'us-central1'

   

.. py:data:: VIDEO_DISPLAY_NAME

   

.. py:data:: MODEL_DISPLAY_NAME

   

.. py:data:: RESOURCE_DATA_BUCKET
   :value: 'airflow-system-tests-resources'

   

.. py:data:: VIDEO_GCS_BUCKET_NAME

   

.. py:data:: VIDEO_DATASET

   

.. py:data:: VIDEO_DATA_CONFIG

   

.. py:data:: create_video_dataset

   

.. py:data:: test_run

   

